Bug 157988 - EDITING Fix cycle case on a selected word during change tracking
Summary: EDITING Fix cycle case on a selected word during change tracking
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords:
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2023-10-30 13:41 UTC by László Németh
Modified: 2023-11-05 16:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2023-10-30 13:41:13 UTC
Bug 141198 fixed cycle case on not selected words during change tracking. Fix cycle case on selected words.
Comment 1 Commit Notification 2023-10-30 20:54:45 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79435eb55ef226fb0e3507aabdc2f8af062680f6

tdf#157988 sw track changes: fix cycle case on a selected word

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-11-02 08:30:11 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6bf92349cab2a558a8160ad6ace409cd4b6f260e

tdf#157988 sw track changes: fix cycle case on a selected word

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Dieter 2023-11-05 16:11:15 UTC
VERIFIED with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2b84c860b591457da4c995435f9ca7ce5c7b3d23
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

László, thanks for fixing it!