tdf#157988 sw track changes: fix cycle case on a selected word

Cycle case didn't work on a selected word, only on the
word under the cursor without selection.

Add unit test also for tdf#141198.

Follow up to commit dc748d7dbd114fbf663752258dbaf003af2926c3
"tdf#141198 sw: fix cycle case with change tracking".

Change-Id: I0c1361c78d09e9b8743192a47dcdfa6f6da52e38
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158666
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>